--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 
 FOR QT WITH UBUNTU 18.04
 1) ./bootstrap
-2) ./configure --enable-vdpau=false
+2) ./configure --disable-vdpau --disable-optimizations --enable-debug
 3) load prj ,select vlc folder and build
+4) run as ./vlc-static --video-filter=opencv_wrapper rtsp://admin:admin12345@10.1.50.102:554/Streaming/Channels/101?transportmode=unicast&profile=Profile_1
 ==============================
 
 README for the VLC media player
